<resources>
    <string name="app_name">App18KM</string>
    <string name="login_gagal">Login Gagal</string>
    <string name="masukkan_username_dan_password_dengan_benar">Masukkan username dan password dengan benar.</string>
    <string name="kembali_ke_login">Kembali ke Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="nama_konsumen">Nama Konsumen:</string>
    <string name="masukkan_nama_konsumen">Masukkan Nama Konsumen</string>
    <string name="tanggal">Tanggal:</string>
    <string name="pesanan_anda">Pesanan Anda</string>
    <string name="total_harga">Total Harga</string>
    <string name="uang_tunai">Uang Tunai:</string>
    <string name="masukkan_uang_tunai">Masukkan Uang Tunai</string>
    <string name="kembalian">Kembalian</string>
    <string name="bayar">Bayar</string>
    <string name="selesai">Selesai</string>
    <string name="menu_minuman">Menu Minuman</string>
    <string name="kopi">Kopi</string>
    <string name="kopi_susu_rp_10_000">Kopi Susu - Rp 10.000</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="teh">Teh</string>
    <string name="teh_susu_rp_8_000">Teh Susu - Rp 8.000</string>
    <string name="extrajossusu">Extrajossusu</string>
    <string name="extrajoss_susu_rp_7_000">Extrajoss Susu - Rp 7.000</string>
    <string name="susu">Susu</string>
    <string name="susu_rp_5_000">Susu - Rp 5.000</string>
    <string name="coklat_panas">Coklat Panas</string>
    <string name="coklat_panas_rp_20_000">Coklat Panas - Rp 10.000</string>
    <string name="es_teh">Es Teh</string>
    <string name="es_teh_rp_10_000">Es Teh - Rp 6.000</string>
    <string name="jeruk_peras">Jeruk Peras</string>
    <string name="jeruk_peras_rp_12_000">Jeruk Peras - Rp 7.000</string>
    <string name="es_kopi_gula_aren">Es Kopi Gula Aren</string>
    <string name="es_kopi_gula_aren_rp_15_000">Es Kopi Gula Aren - Rp 15.000</string>
    <string name="wedang_jahe">Wedang Jahe</string>
    <string name="wedang_jahe_rp_9_000">Wedang Jahe - Rp 9.000</string>
    <string name="milo_panas">Milo Panas</string>
    <string name="milo_panas_rp_15_000">Milo Panas - Rp 7.000</string>
    <string name="tampilkan_pesanan">Tampilkan Pesanan</string>
</resources>