<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/logogelap"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Nama Konsumen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:text="@string/nama_konsumen"
            android:textColor="#ffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:padding="18dp"
            android:textColor="#ffff"
            android:id="@+id/nameEditText"
            android:hint="@string/masukkan_nama_konsumen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <!-- Tanggal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:textColor="#ffff"
            android:text="@string/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textColor="#ffff"
            android:id="@+id/dateTextView"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:textColor="#ffff"
        android:text="@string/pesanan_anda"
        android:id="@+id/orderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:textColor="#ffff"
        android:text="@string/total_harga"
        android:id="@+id/totalPriceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:textColor="#ffff"
            android:text="@string/uang_tunai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:padding="18dp"
            android:textColor="#ffff"
            android:id="@+id/cashEditText"
            android:hint="@string/masukkan_uang_tunai"
            android:inputType="numberDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:textColor="#ffff"
        android:text="@string/kembalian"
        android:id="@+id/changeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnCalculateChange"
        android:text="@string/bayar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"/>

    <!-- Tombol Kembali -->
    <Button
        android:id="@+id/btnBack"
        android:text="@string/selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>
</LinearLayout>
